package com.example.translator;

import jakarta.ws.rs.ApplicationPath;
import jakarta.ws.rs.core.Application;

import java.util.HashSet;
import java.util.Set;

@ApplicationPath("/api")
public class RestApplication extends Application {

    @Override
    public Set<Class<?>> getClasses() {
        Set<Class<?>> classes = new HashSet<>();

        classes.add(TranslatorResource.class);
        classes.add(BasicAuthFilter.class); // 👈 THIS IS THE FIX

        return classes;
    }
}